add: header, hero, logo hero

--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header>
+      <div class="hero">
+        <div class="logo-hero">
+          <img src="img/logo.svg" alt="boolean logo" />
+        </div>
+      </div>
+    </header>
+    <!-- /Header -->
+    <!-- Main -->
+    <main></main>
+    <!-- /Main -->
+    <!-- Footer -->
+    <footer></footer>
+    <!-- /Footer -->
+  </body>
 </html>
