add: general settings, title section

--- a/index.html
+++ b/index.html
@@ -4,23 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>The Booleaner</title>
   </head>
   <body>
-    <!-- Header -->
-    <header>
-      <div class="hero">
-        <div class="logo-hero">
-          <img src="img/logo.svg" alt="boolean logo" />
+    <div class="center">
+      <!-- Header -->
+      <header class="mrg-btm">
+        <div class="hero">
+          <div class="logo-hero">
+            <img src="img/logo.svg" alt="boolean logo" />
+          </div>
         </div>
-      </div>
-    </header>
-    <!-- /Header -->
-    <!-- Main -->
-    <main></main>
-    <!-- /Main -->
-    <!-- Footer -->
-    <footer></footer>
-    <!-- /Footer -->
+      </header>
+      <!-- /Header -->
+      <!-- Main -->
+      <main>
+        <!-- title section -->
+        <section>
+          <h1>
+            Internet deve essere al servizio del "bene pubblico": il manifesto
+            di Tim Berners-lee
+          </h1>
+          <h5 class="text-color-gray">
+            Scritto da <a class="author" href="">The Booleaner</a>
+          </h5>
+          <p class="text-color-gray date">il 10/10/2020</p>
+        </section>
+        <!-- /title section -->
+      </main>
+      <!-- /Main -->
+      <!-- Footer -->
+      <footer></footer>
+      <!-- /Footer -->
+    </div>
   </body>
 </html>
