change: "position" into .space class in header section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <!-- Header -->
       <header class="mrg-btm">
         <div class="hero">
+          <div class="space"></div>
           <div class="logo-hero">
             <img src="img/logo.svg" alt="boolean logo" />
           </div>
