--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
       <header class="mrg-btm">
         <div class="hero">
           <div class="space"></div>
-          <div class="logo-hero">
-            <img src="img/logo.svg" alt="boolean logo" />
-          </div>
+
+          <img class="logo-hero" src="img/logo.svg" alt="boolean logo" />
         </div>
       </header>
       <!-- /Header -->
@@ -32,6 +31,14 @@
           <p class="text-color-gray date">il 10/10/2020</p>
         </section>
         <!-- /title section -->
+        <!-- Photo section -->
+        <section>
+          <div>
+            <img class="tim-img" src="img/tim-1.jpg" alt="" />
+            <img class="tim-img" src="img/tim-2.jpg" alt="" />
+          </div>
+        </section>
+        <!-- /Photo section -->
       </main>
       <!-- /Main -->
       <!-- Footer -->
