add: photo section

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
         <!-- /title section -->
         <!-- Photo section -->
         <section>
-          <div>
-            <img class="tim-img" src="img/tim-1.jpg" alt="" />
-            <img class="tim-img" src="img/tim-2.jpg" alt="" />
+          <div class="img-container">
+            <img class="tim-img-1" src="img/tim-1.jpg" alt="" />
+            <img class="tim-img-2" src="img/tim-2.jpg" alt="" />
           </div>
+          <p class="text-small">
+            1st Photo: Jhon S. and James L. Knight Foundation, by Scott
+            henrichsen
+          </p>
+          <p class="text-small">2nd photo: Wikimedia, by Paul Clarke</p>
         </section>
         <!-- /Photo section -->
       </main>
