add: paragraph section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         <!-- /title section -->
         <!-- Photo section -->
-        <section>
+        <section class="mrg-btm">
           <div class="img-container">
             <img class="tim-img-1" src="img/tim-1.jpg" alt="" />
             <img class="tim-img-2" src="img/tim-2.jpg" alt="" />
@@ -44,6 +44,33 @@
           <p class="text-small">2nd photo: Wikimedia, by Paul Clarke</p>
         </section>
         <!-- /Photo section -->
+        <!-- Paragraph section -->
+        <section>
+          <p class="mrg-btm">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima,
+            inventore beatae dolore consectetur,
+            <span class="bg-yellow"
+              >nulla explicabo quisquam laborum magni tenetur animi adipisci
+              nesciunt</span
+            >
+            reiciendis possimus veniam reprehenderit ad eos debitis est.
+          </p>
+          <ul class="paragraph-list">
+            <li>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
+              quam . Eligendi cum omnis rerum?
+            </li>
+            <li>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
+              quam natus nobis. Eligendi cumd enim rerum?
+            </li>
+            <li>
+              Lorem ipsum dolor sit, amesectetur adipisicing elit. Commodi
+              quamips. Eligemnis quod enim rerum?
+            </li>
+          </ul>
+        </section>
+        <!-- /Paragraph section -->
       </main>
       <!-- /Main -->
       <!-- Footer -->
