add: table section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
         <!-- /Photo section -->
         <!-- Paragraph section -->
-        <section>
+        <section class="mrg-btm">
           <p class="mrg-btm">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima,
             inventore beatae dolore consectetur,
@@ -58,11 +58,11 @@
           <ul class="paragraph-list">
             <li>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
-              quam . Eligendi cum omnis rerum?
+              quam . Eligendi rerum?
             </li>
             <li>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
-              quam natus nobis. Eligendi cumd enim rerum?
+              quam natus.cumd enim rerum?
             </li>
             <li>
               Lorem ipsum dolor sit, amesectetur adipisicing elit. Commodi
@@ -71,6 +71,60 @@
           </ul>
         </section>
         <!-- /Paragraph section -->
+        <!-- Table section -->
+        <section>
+          <table class="mrg-btm">
+            <thead>
+              <tr>
+                <th>Lorem ipsum</th>
+                <th>Lorem ipsum</th>
+                <th>Lorem ipsum</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="light-blue">
+                <td class="td-large">Lorem ipsum</td>
+                <td class="td-large">Lorem ipsum</td>
+                <td>
+                  Lorem ipsum dolor adipisicing elit. Lorem ipsum dolor sit amet
+                  voluptates, ex sint sed fugit dolore eaque ea, nostrum nobis.
+                  Quo aliquid accusantium
+                </td>
+              </tr>
+              <tr>
+                <td class="td-large">Lorem ipsum</td>
+                <td class="td-large">Lorem ipsum</td>
+                <td>
+                  Lorem ipsum dolor adipisicing elit. Lorem ipsum dolor sit amet
+                  voluptates, ex sint sed fugit dolore eaque ea, nostrum nobis.
+                  Quo aliquid accusantium
+                </td>
+              </tr>
+              <tr class="light-blue">
+                <td class="td-large">Lorem ipsum</td>
+                <td class="td-large">Lorem ipsum</td>
+                <td>
+                  Lorem ipsum dolor adipisicing elit. Lorem ipsum dolor sit amet
+                  voluptates , ex sint sed fugit dolore eaque ea, nostrum nobis.
+                  Quo aliquid accusantium
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="mrg-btm">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
+            fugit dolorem officiis quo reprehenderit delectus a eligendi
+            pariatur voluptatem libero!<span class="bg-yellow">
+              Culpa, exercitationem nobis. Maiores veniam et odio a ad
+              earum.</span
+            >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            consectetur quidem, eaque laboriosam similique dolores soluta cum
+            inventore quo obcaecati, voluptate quia minima nobis eius
+            consequatur possimus. Natus, impedit voluptas?
+          </p>
+        </section>
+        <!-- /Table section -->
       </main>
       <!-- /Main -->
       <!-- Footer -->
