add: footer section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- /Photo section -->
         <!-- Paragraph section -->
         <section class="mrg-btm">
-          <p class="mrg-btm">
+          <p class="mrg-btm-big">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima,
             inventore beatae dolore consectetur,
             <span class="bg-yellow"
@@ -55,7 +55,7 @@
             >
             reiciendis possimus veniam reprehenderit ad eos debitis est.
           </p>
-          <ul class="paragraph-list">
+          <ul class="paragraph-list mrg-btm-big">
             <li>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
               quam . Eligendi rerum?
@@ -128,7 +128,15 @@
       </main>
       <!-- /Main -->
       <!-- Footer -->
-      <footer></footer>
+      <footer class="mrg-btm-big">
+        <h3 class="text-color-gray mrg-btm-small">Potrebbero interessarti</h3>
+        <div class="footer-img-1 box mrg-btm-small">
+          <a class="footer-link" href="">lorem ipsum dolor</a>
+        </div>
+        <div class="footer-img-2 box mrg-btm-small">
+          <a class="footer-link" href="">lorem ipsum dolor</a>
+        </div>
+      </footer>
       <!-- /Footer -->
     </div>
   </body>
