--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
       <!-- Header -->
       <header class="mrg-btm">
         <div class="hero">
-          <div class="space"></div>
-
+          <!-- <div class="space"></div> -->
           <img class="logo-hero" src="img/logo.svg" alt="boolean logo" />
         </div>
       </header>
       <!-- /Header -->
       <!-- Main -->
-      <main>
+      <main class="padding-left">
         <!-- title section -->
-        <section>
+        <section class="mrg-btm">
           <h1>
             Internet deve essere al servizio del "bene pubblico": il manifesto
             di Tim Berners-lee
@@ -78,7 +77,7 @@
               <tr>
                 <th>Lorem ipsum</th>
                 <th>Lorem ipsum</th>
-                <th>Lorem ipsum</th>
+                <th class="large-col">Lorem ipsum</th>
               </tr>
             </thead>
             <tbody>
@@ -128,7 +127,7 @@
       </main>
       <!-- /Main -->
       <!-- Footer -->
-      <footer class="mrg-btm-big">
+      <footer class="mrg-btm-big padding-left">
         <h3 class="text-color-gray mrg-btm-small">Potrebbero interessarti</h3>
         <div class="footer-img-1 box mrg-btm-small">
           <a class="footer-link" href="">lorem ipsum dolor</a>
